# ComputacaoGraficaG44

./: README.md
fase1/XML/: ._boneco_de_neve.xml  ._plane.xml
fase1/source/: ._CMakeLists.txt  CMakeLists.txt  Makefile
fase1/source/Engine/: ._main.cpp  main.cpp
fase1/source/XMLGenerator/: ._main.cpp  main.cpp
fase2/Modelos/: sphere.3d
fase2/XML/: plane.xml
fase2/demos/: SisSolar.xml  boneco_de_neve.xml  cone.3d  sphere.3d  torus.3d  torus.xml
fase2/source/: CMakeLists.txt
fase2/source/Engine/: ._Group.hpp  ._Primitive.hpp  ._Rotate.hpp  ._Scale.hpp  ._Transformation.hpp  ._Translate.hpp  ._XMLParser.hpp  Controls.hpp  Group.cpp  Group.hpp  Primitive.cpp  Rotate.cpp  Rotate.hpp  Scale.cpp  Scale.hpp  Transformation.cpp  Transformation.hpp  Translate.cpp  Translate.hpp  XMLParser.cpp  main.cpp
fase2/source/XMLGenerator/: ._main.cpp  main.cpp
fase3/Modelos/: box.3d  plane.3d  sphere.3d
fase3/XML/: ._boneco_de_neve.xml  boneco_de_neve.xml  teapot.patch
fase3/source/Engine/: Controls.hpp  Group.cpp  Group.hpp  Primitive.cpp  Primitive.hpp  Rotate.cpp  Scale.cpp  Scale.hpp  Translate.cpp  XMLParser.cpp  main.cpp
fase3/source/XMLGenerator/: main.cpp
fase4/: CMakeLists.txt  box.3d  box.xml
fase4/Modelos/: cone.3d
fase4/XML/: SisSolar.xml  box.xml  cone.xml  sphere.xml
fase4/source/: CMakeLists.txt
fase4/source/Engine/: Controls.hpp  Group.cpp  Group.hpp  Light.cpp  Light.hpp  Primitive.cpp  Primitive.hpp  Rotate.hpp  Transformation.hpp  Translate.hpp  XMLParser.cpp  XMLParser.hpp  main.cpp
fase4/source/XMLGenerator/: main.cpp
